--- a/3-back-end/bloco-22-introducao-ao-desenvolvimento-web-com-nodejs/dia-1-nodejs-um-motor-javascript/Exercicios/package.json
+++ b/3-back-end/bloco-22-introducao-ao-desenvolvimento-web-com-nodejs/dia-1-nodejs-um-motor-javascript/Exercicios/package.json
@@ -2,9 +2,10 @@
   "name": "my-scripts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "imc.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "imc": "node imc.js"
   },
   "author": "",
   "license": "ISC"
