--- a/3-back-end/bloco-23-nodejs-camada-de-servico-e-arquitetura-rest-e-restful/dia-2-arquitetura-de-software-camada-de-controller-e-service/hello-msc/package.json
+++ b/3-back-end/bloco-23-nodejs-camada-de-servico-e-arquitetura-rest-e-restful/dia-2-arquitetura-de-software-camada-de-controller-e-service/hello-msc/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-rescue": "^1.1.31",
+    "joi": "^17.6.0",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7"
   }
