--- a/3-back-end/bloco-23-nodejs-camada-de-servico-e-arquitetura-rest-e-restful/dia-2-arquitetura-de-software-camada-de-controller-e-service/hello-msc/package.json
+++ b/3-back-end/bloco-23-nodejs-camada-de-servico-e-arquitetura-rest-e-restful/dia-2-arquitetura-de-software-camada-de-controller-e-service/hello-msc/package.json
@@ -11,6 +11,7 @@
   "author": "Tryber",
   "license": "GPL-3.0",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "express-rescue": "^1.1.31",
     "joi": "^17.6.0",
