sequelize configurado e conectado com o db

--- a/3-back-end/bloco-24-nodejs-orm-e-autenticacao/dia-1-orm-interface-da-aplicação-com-o-banco-de-dados/app-with-sequelize/package.json
+++ b/3-back-end/bloco-24-nodejs-orm-e-autenticacao/dia-1-orm-interface-da-aplicação-com-o-banco-de-dados/app-with-sequelize/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sequelize": "^6.21.3"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.3",
+    "sequelize-cli": "^6.4.1"
   }
 }
