--- a/3-back-end/bloco-24-nodejs-orm-e-autenticacao/dia-1-orm-interface-da-aplicação-com-o-banco-de-dados/app-with-sequelize/package.json
+++ b/3-back-end/bloco-24-nodejs-orm-e-autenticacao/dia-1-orm-interface-da-aplicação-com-o-banco-de-dados/app-with-sequelize/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3",
